# inventree-approvals

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
inventree_approvals/: __init__.py  api.py  approvals_plugin.py  helpers.py
inventree_approvals/frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.d.ts  vite.config.js  vite.config.ts
inventree_approvals/frontend/src/: AnyApproverWidget.tsx  ApprovalHistory.tsx  ApprovalModals.tsx  ApprovalsPanel.tsx  PendingApprovalsWidget.tsx  PurchaseOrderApprovalsPage.tsx  index.ts  index.tsx  types.ts
inventree_approvals/static/: approvals_panel.js  approvals_panel.js.map
inventree_approvals/static/.vite/: manifest.json
